3.6.2 ss-uid代码优化